@@ -3946,6 +3946,10 @@
 			included in the page list at the bottom of the search
 			results page. As of version 3.1.4, this will limit the
 			total number of matching documents that are shown.
+			You can make the number of page buttons smaller than the
+			number of allowed pages by setting the
+			<a href="#maximum_page_buttons">maximum_page_buttons</a>
+			attribute.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -7833,7 +7837,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: $Date: 2001/07/24 19:05:06 $
+Last modified: $Date: 2001/07/24 21:14:37 $
 <!-- hhmts end -->
   </body>
 </html>
